--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="timer">0:30</div>
         <img src="title.png" img id="title">
         <button id="reset">RESET</button>
-        <input type="button" class="beast" onclick="location.href='MemoryGame2.html'" value="beast mode" />
+        <input type="button" class="beast" onclick="location.href='index2.html'" value="beast mode" />
     </header>
 
     <div id="main">
