--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
         <div id="timer">0:00</div>
         <img src="title.png" img id="title">
         <button id="reset">RESET</button>
-        <input type="button" id="normalStyle" onclick="location.href='MemoryGame.html'" value="normal style" />
+        <input type="button" id="normalStyle" onclick="location.href='index.html'" value="normal style" />
     </header>
 
 
